// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Answer Editor should render Checkbox 1`] = `
<div>
  <CheckboxAnswer
    answer={
      Object {
        "description": "",
        "id": 1,
        "options": Array [
          Object {
            "description": "",
            "id": 1,
            "label": "",
          },
        ],
        "title": "",
        "type": "Checkbox",
      }
    }
    onAddOption={[Function]}
    onDeleteOption={[Function]}
    onFocus={[Function]}
    onUpdate={[Function]}
    onUpdateOption={[Function]}
  />
  <AnswerEditor__AnswerDeleteButton
    onClick={[Function]}
    title="Delete answer"
    type="button"
  />
</div>
`;

exports[`Answer Editor should render TextField 1`] = `
<div>
  <withEntityEditor(StatelessTextAnswer)
    answer={
      Object {
        "description": "",
        "id": 1,
        "title": "",
        "type": "TextField",
      }
    }
    onAddOption={[Function]}
    onDeleteOption={[Function]}
    onFocus={[Function]}
    onUpdate={[Function]}
    onUpdateOption={[Function]}
  />
  <AnswerEditor__AnswerDeleteButton
    onClick={[Function]}
    title="Delete answer"
    type="button"
  />
</div>
`;
